REG-383 No visible control to close the help window in the markdown editor, set close icon to 'fixed'

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -49,17 +49,15 @@ div.markdown-help-content
     bottom: $distance
     right: $distance
     left: $distance
-    padding: 40px
+    padding: 40px 50px 40px 50px
     overflow: auto
     background-color: white
     @include code-style
     >i.fa.fa-times-circle
       position: fixed
       top: 55px
-      right: 70px
+      right: 65px
       font-family: FontAwesome
-
-
 div[data-tribe-markdown]
   display: inline-block
   div.CodeMirror, div.CodeMirror-scroll
